crates/plantuml-core/tests/snapshots/state_tests__simple_state.snap
---
source: crates/plantuml-core/tests/state_tests.rs
assertion_line: 26
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg height="340" viewBox="215 25 190 340" width="190" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arrow" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8 L4,4 Z" fill="#181818"/>
</marker>
<marker id="arrow-open" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="inheritance" markerHeight="20" markerUnits="userSpaceOnUse" markerWidth="20" orient="auto" refX="20" refY="10">
<path d="M0,0 L20,10 L0,20 Z" fill="#FFFFFF" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="composition" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#181818"/>
</marker>
<marker id="aggregation" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#FFFFFF" stroke="#181818" stroke-width="1"/>
</marker>
</defs>
<g id="initial_">
<ellipse cx="280" cy="40" fill="#E2E2F0" rx="10" ry="10" stroke="#181818" stroke-width="1"/>
</g>
<g id="state_Active">
<rect fill="#E2E2F0" height="50" rx="10" ry="10" stroke="#181818" stroke-width="0.5" width="120" x="220" y="140"/>
<text dominant-baseline="middle" fill="#000000" font-family="sans-serif" font-size="14" text-anchor="middle" x="280" y="165">
Active
</text>
</g>
<g id="state_Inactive">
<rect fill="#E2E2F0" height="50" rx="10" ry="10" stroke="#181818" stroke-width="0.5" width="120" x="220" y="250"/>
<text dominant-baseline="middle" fill="#000000" font-family="sans-serif" font-size="14" text-anchor="middle" x="280" y="275">
Inactive
</text>
</g>
<g id="trans__Active">
<path d="M280,50 L280,140" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
</g>
<g id="trans_Active_Inactive">
<path d="M280,190 L280,250" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000000" font-family="sans-serif" font-size="13" text-anchor="start" x="285" y="185">
timeout
</text>
</g>
<g id="trans_Inactive_Active">
<path d="M280,250 L280,190" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000000" font-family="sans-serif" font-size="13" text-anchor="start" x="285" y="245">
resume
</text>
</g>
<g id="trans_Active_">
<path d="M280,140 L280,50" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000000" font-family="sans-serif" font-size="13" text-anchor="start" x="285" y="135">
close
</text>
</g>
</svg>
