crates/plantuml-core/tests/snapshots/state_tests__state_with_choice.snap
---
source: crates/plantuml-core/tests/state_tests.rs
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg height="340" viewBox="115 25 390 340" width="390" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arrow" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8 L4,4 Z" fill="#181818"/>
</marker>
<marker id="arrow-open" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="inheritance" markerHeight="20" markerUnits="userSpaceOnUse" markerWidth="20" orient="auto" refX="20" refY="10">
<path d="M0,0 L20,10 L0,20 Z" fill="#FFFFFF" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="composition" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#181818"/>
</marker>
<marker id="aggregation" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#FFFFFF" stroke="#181818" stroke-width="1"/>
</marker>
</defs>
<g id="initial_">
<ellipse cx="280" cy="40" fill="#E2E2F0" rx="10" ry="10" stroke="#181818" stroke-width="1"/>
</g>
<g id="choice_check">
<text fill="#000000" font-family="sans-serif" font-size="16" x="270" y="156">
◇
</text>
</g>
<g id="state_Valid">
<rect fill="#E2E2F0" height="50" rx="10" ry="10" stroke="#181818" stroke-width="0.5" width="120" x="120" y="250"/>
<text dominant-baseline="middle" fill="#000000" font-family="sans-serif" font-size="14" text-anchor="middle" x="180" y="275">
Valid
</text>
</g>
<g id="state_Invalid">
<rect fill="#E2E2F0" height="50" rx="10" ry="10" stroke="#181818" stroke-width="0.5" width="120" x="320" y="250"/>
<text dominant-baseline="middle" fill="#000000" font-family="sans-serif" font-size="14" text-anchor="middle" x="380" y="275">
Invalid
</text>
</g>
<g id="trans__check">
<path d="M280,50 L280,140" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
</g>
<g id="trans_check_Valid">
<path d="M280,160 L180,250" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000000" font-family="sans-serif" font-size="13" text-anchor="start" x="185" y="155">
[valid]
</text>
</g>
<g id="trans_check_Invalid">
<path d="M280,160 L380,250" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000000" font-family="sans-serif" font-size="13" text-anchor="start" x="285" y="155">
[invalid]
</text>
</g>
<g id="trans_Valid_">
<path d="M180,250 L280,50" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
</g>
<g id="trans_Invalid_">
<path d="M380,250 L280,50" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
</g>
</svg>
